@@ -2251,7 +2251,7 @@ SCIP_RETCODE checkCurvature(
 
 /* replaces a node by another node in expression graph
  * moves all parents of node to replacement
- * replaces all exprgraphnode's in constraints that are node by replacement
+ * replaces all exprgraphnode's in constraints that use node by replacement, except for the last "update constraints" many, because they may use node on purpose
  * node may be freed, if captured only by given constraints
  */
 static
@@ -2259,8 +2259,8 @@ SCIP_RETCODE reformReplaceNode(
    SCIP_EXPRGRAPH*       exprgraph,          /**< expression graph */
    SCIP_EXPRGRAPHNODE**  node,               /**< pointer to node to be replaced in expression graph */
    SCIP_EXPRGRAPHNODE*   replacement,        /**< node which takes node's place */
-   SCIP_CONS**           conss,              /**< constraints */
-   int                   nconss              /**< number of constraints */
+   SCIP_CONSHDLR*        conshdlr,           /**< constraint handler */
+   int                   nskipupdatecons     /**< number of last update constraints to be skipped in check */
    )
 {
    SCIP_CONSDATA* consdata;
@@ -2270,7 +2270,8 @@ SCIP_RETCODE reformReplaceNode(
    assert(node != NULL);
    assert(*node != NULL);
    assert(replacement != NULL);
-   assert(conss != NULL || nconss == 0);
+   assert(conshdlr != NULL);
+   assert(nskipupdatecons <= SCIPconshdlrGetNUpdateConss(conshdlr));
 
    SCIP_CALL( SCIPexprgraphMoveNodeParents(exprgraph, node, replacement) );
 
@@ -2279,15 +2280,23 @@ SCIP_RETCODE reformReplaceNode(
       return SCIP_OKAY;
 
    /* if node still exists, then because it is captured by some constraint (it should not have parents anymore)
-    * thus, look into the given constraints and replace their exprgraphnode by replacement
-    * @todo may be expensive when this is done more often, esp. when we know that node will not be freed due to an added auxiliary constraint
+    * thus, look into all active constraints and also those that have been just added during reformulation (delayed activation)
+    * and replace their exprgraphnode by replacement
+    * @todo may be expensive when this is done more often
     */
    assert(*node == NULL || SCIPexprgraphGetNodeNParents(*node) == 0);
-   for( c = 0; c < nconss; ++c )
+   for( c = 0; c < SCIPconshdlrGetNActiveConss(conshdlr) + SCIPconshdlrGetNUpdateConss(conshdlr) - nskipupdatecons; ++c )
    {
-      assert(conss[c] != NULL);  /*lint !e613*/
+      SCIP_CONS* cons;
 
-      consdata = SCIPconsGetData(conss[c]);  /*lint !e613*/
+      if( c < SCIPconshdlrGetNActiveConss(conshdlr) )
+         cons = SCIPconshdlrGetConss(conshdlr)[c];
+      else
+         cons = SCIPconshdlrGetUpdateConss(conshdlr)[c-SCIPconshdlrGetNActiveConss(conshdlr)];
+
+      assert(cons != NULL);  /*lint !e613*/
+
+      consdata = SCIPconsGetData(cons);  /*lint !e613*/
       assert(consdata != NULL);
 
       if( consdata->exprgraphnode == *node )
@@ -2313,8 +2322,7 @@ SCIP_RETCODE reformNode2Var(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP_EXPRGRAPH*       exprgraph,          /**< expression graph */
    SCIP_EXPRGRAPHNODE*   node,               /**< expression graph node */
-   SCIP_CONS**           conss,              /**< constraints where to update exprgraphnode */
-   int                   nconss,             /**< number of constraints */
+   SCIP_CONSHDLR*        conshdlr,           /**< constraint handler */
    int*                  naddcons,           /**< counter to increase when constraint is added */
    SCIP_Bool             donotmultaggr       /**< whether to mark auxiliary variable as not to multiaggregate */
    )
@@ -2370,7 +2378,7 @@ SCIP_RETCODE reformNode2Var(
 
    /* move parents of node in expression graph to auxvarnode
     * replace node by auxvarnode in constraints that use node */
-   SCIP_CALL( reformReplaceNode(exprgraph, &node, auxvarnode, conss, nconss) );
+   SCIP_CALL( reformReplaceNode(exprgraph, &node, auxvarnode, conshdlr, 1) );
 
    SCIP_CALL( SCIPreleaseCons(scip, &auxcons) );
    SCIP_CALL( SCIPreleaseVar(scip, &auxvar) );
@@ -2387,8 +2395,7 @@ SCIP_RETCODE reformEnsureChildrenMinCurvature(
    SCIP_EXPRGRAPH*       exprgraph,          /**< expression graph */
    SCIP_EXPRGRAPHNODE*   node,               /**< expression graph node */
    SCIP_EXPRCURV         mincurv,            /**< minimal desired curvature */
-   SCIP_CONS**           conss,              /**< constraints to check whether they use one of the replaced nodes */
-   int                   nconss,             /**< number of constraints to check */
+   SCIP_CONSHDLR*        conshdlr,           /**< constraint handler */
    int*                  naddcons            /**< counter to increase when constraint is added */
    )
 {
@@ -2415,7 +2422,7 @@ SCIP_RETCODE reformEnsureChildrenMinCurvature(
          SCIPdebugMsg(scip, "add auxiliary variable for child %p(%d,%d) with curvature %s\n",
             (void*)child, SCIPexprgraphGetNodeDepth(child), SCIPexprgraphGetNodePosition(child), SCIPexprcurvGetName(SCIPexprgraphGetNodeCurvature(child)) );
 
-         SCIP_CALL( reformNode2Var(scip, exprgraph, child, conss, nconss, naddcons, FALSE) );
+         SCIP_CALL( reformNode2Var(scip, exprgraph, child, conshdlr, naddcons, FALSE) );
          needupdate = TRUE;
 
          /* i'th child of node should now be a variable */
@@ -2848,6 +2855,7 @@ SCIP_RETCODE reformulate(
          {
             if( conshdlrdata->nlconsupgrades[u]->nodereform != NULL && conshdlrdata->nlconsupgrades[u]->active )
             {
+               int nupdateconsbefore = SCIPconshdlrGetNUpdateConss(conshdlr);
                SCIP_CALL( conshdlrdata->nlconsupgrades[u]->nodereform(scip, exprgraph, node, naddcons, &reformnode) );
                if( reformnode == NULL )
                   continue;
@@ -2855,7 +2863,8 @@ SCIP_RETCODE reformulate(
                SCIPdebugMsg(scip, "external nodereform reformulated node %p(%d,%d), replace by %p\n",
                   (void*)node, SCIPexprgraphGetNodeDepth(node), SCIPexprgraphGetNodePosition(node), (void*)reformnode);
 
-               SCIP_CALL( reformReplaceNode(exprgraph, &node, reformnode, conss, nconss) );
+               /* do not replace node in nonlinear update constraints that may have been added by reformulation */
+               SCIP_CALL( reformReplaceNode(exprgraph, &node, reformnode, conshdlr, SCIPconshdlrGetNUpdateConss(conshdlr) - nupdateconsbefore) );
                SCIP_CALL( SCIPexprgraphUpdateNodeBoundsCurvature(reformnode, INTERVALINFTY, BOUNDTIGHTENING_MINSTRENGTH, TRUE) );
                assert(!SCIPintervalIsEmpty(INTERVALINFTY, SCIPexprgraphGetNodeBounds(reformnode)));
 
@@ -2926,7 +2935,7 @@ SCIP_RETCODE reformulate(
              * thus, turn node into variable, if it has nonlinear parents */
             if( havenonlinparent )
             {
-               SCIP_CALL( reformNode2Var(scip, exprgraph, node, conss, nconss, naddcons, FALSE) );
+               SCIP_CALL( reformNode2Var(scip, exprgraph, node, conshdlr, naddcons, FALSE) );
                assert(node != NULL);
                assert(SCIPexprgraphGetNodeNParents(node) == 0); /* node should now be at top of graph */
             }
@@ -2944,7 +2953,7 @@ SCIP_RETCODE reformulate(
              * however, that will not work for user-expressions, so we should also ensure that they are none (@todo as they are linear, they could actually be replaced by a regular linear expression)
              */
             SCIPdebugMessage("ensure children are linear\n");
-            SCIP_CALL( reformEnsureChildrenMinCurvature(scip, exprgraph, node, SCIP_EXPRCURV_LINEAR, conss, nconss, naddcons) );
+            SCIP_CALL( reformEnsureChildrenMinCurvature(scip, exprgraph, node, SCIP_EXPRCURV_LINEAR, conshdlr, naddcons) );
 
             needupdate = FALSE;  /* whether we need to update curvature of node */
             for( c = 0; c < SCIPexprgraphGetNodeNChildren(node); ++c )
@@ -2957,7 +2966,7 @@ SCIP_RETCODE reformulate(
                   SCIPdebugMessage("add auxiliary variable for child %p(%d,%d) with curvature %s operator %s\n",
                      (void*)child, SCIPexprgraphGetNodeDepth(child), SCIPexprgraphGetNodePosition(child), SCIPexprcurvGetName(SCIPexprgraphGetNodeCurvature(child)), SCIPexpropGetName(SCIPexprgraphGetNodeOperator(child)) );
 
-                  SCIP_CALL( reformNode2Var(scip, exprgraph, child, conss, nconss, naddcons, FALSE) );
+                  SCIP_CALL( reformNode2Var(scip, exprgraph, child, conshdlr, naddcons, FALSE) );
                   needupdate = TRUE;
 
                   /* c'th child of node should now be a variable */
@@ -2986,7 +2995,7 @@ SCIP_RETCODE reformulate(
              */
             if( havenonlinparent || SCIPexprgraphHasNodeSibling(node) )
             {
-               SCIP_CALL( reformNode2Var(scip, exprgraph, node, conss, nconss, naddcons, FALSE) );
+               SCIP_CALL( reformNode2Var(scip, exprgraph, node, conshdlr, naddcons, FALSE) );
                assert(node != NULL);
                assert(SCIPexprgraphGetNodeNParents(node) == 0); /* node should now be at top of graph, so it can be upgraded by cons_quadratic */
                break;
@@ -3055,7 +3064,7 @@ SCIP_RETCODE reformulate(
             SCIP_CALL( SCIPaddCons(scip, auxcons) );
 
             /* replace node by auxvarnode in graph and constraints that use it */
-            SCIP_CALL( reformReplaceNode(exprgraph, &node, auxvarnode, conss, nconss) );
+            SCIP_CALL( reformReplaceNode(exprgraph, &node, auxvarnode, conshdlr, 1) );
 
             SCIP_CALL( SCIPreleaseCons(scip, &auxcons) );
             SCIP_CALL( SCIPreleaseVar(scip, &auxvar) );
@@ -3069,7 +3078,7 @@ SCIP_RETCODE reformulate(
          case SCIP_EXPR_MIN:
          {
             /* make sure that both children are concave, because min of concave functions is concave */
-            SCIP_CALL( reformEnsureChildrenMinCurvature(scip, exprgraph, node, SCIP_EXPRCURV_CONCAVE, conss, nconss, naddcons) );
+            SCIP_CALL( reformEnsureChildrenMinCurvature(scip, exprgraph, node, SCIP_EXPRCURV_CONCAVE, conshdlr, naddcons) );
             assert(SCIPexprgraphGetNodeCurvature(node) & SCIP_EXPRCURV_CONCAVE);
             ++i;
             break;
@@ -3078,7 +3087,7 @@ SCIP_RETCODE reformulate(
          case SCIP_EXPR_MAX:
          {
             /* make sure that both children are convex, because max of convex functions is convex */
-            SCIP_CALL( reformEnsureChildrenMinCurvature(scip, exprgraph, node, SCIP_EXPRCURV_CONVEX, conss, nconss, naddcons) );
+            SCIP_CALL( reformEnsureChildrenMinCurvature(scip, exprgraph, node, SCIP_EXPRCURV_CONVEX, conshdlr, naddcons) );
             assert(SCIPexprgraphGetNodeCurvature(node) & SCIP_EXPRCURV_CONVEX);
             ++i;
             break;
@@ -3093,12 +3102,14 @@ SCIP_RETCODE reformulate(
             {
                SCIP_EXPRGRAPHNODE* auxvarnode;
                SCIP_Real exponent;
+               int reformnaddcons = 0;
 
                /* if we have something like x^(-3) with mixed sign for x, then add auxvar and reform as auxvar*x^3 = 1 via reformMonomial */
                exponent = (SCIP_Real)SCIPexprgraphGetNodeIntPowerExponent(node);
-               SCIP_CALL( reformMonomial(scip, exprgraph, 1, children, &exponent, &auxvarnode, TRUE, SCIPexprgraphGetNodeDepth(node), naddcons) );
+               SCIP_CALL( reformMonomial(scip, exprgraph, 1, children, &exponent, &auxvarnode, TRUE, SCIPexprgraphGetNodeDepth(node), &reformnaddcons) );
+               *naddcons += reformnaddcons;
                /* replace node by auxvarnode */
-               SCIP_CALL( reformReplaceNode(exprgraph, &node, auxvarnode, conss, nconss) );
+               SCIP_CALL( reformReplaceNode(exprgraph, &node, auxvarnode, conshdlr, reformnaddcons) );
                break;
             }
 
@@ -3119,7 +3130,7 @@ SCIP_RETCODE reformulate(
          {
             assert(nchildren == 1);
 
-            SCIP_CALL( reformEnsureChildrenMinCurvature(scip, exprgraph, node, SCIP_EXPRCURV_LINEAR, conss, nconss, naddcons) );
+            SCIP_CALL( reformEnsureChildrenMinCurvature(scip, exprgraph, node, SCIP_EXPRCURV_LINEAR, conshdlr, naddcons) );
 
             if( SCIPexprgraphGetNodeCurvature(node) == SCIP_EXPRCURV_UNKNOWN )
             {
@@ -3147,7 +3158,7 @@ SCIP_RETCODE reformulate(
                assert(SCIPexprgraphGetNodeOperator(node) != SCIP_EXPR_SIGNPOWER || SCIPexprgraphGetNodeSignPowerExponent(node) > 1.0);
                if( havenonlinparent )
                {
-                  SCIP_CALL( reformNode2Var(scip, exprgraph, node, conss, nconss, naddcons, FALSE) );
+                  SCIP_CALL( reformNode2Var(scip, exprgraph, node, conshdlr, naddcons, FALSE) );
                   assert(node != NULL); /* it should be used by some auxiliary constraint now */
                   assert(SCIPexprgraphGetNodeNParents(node) == 0); /* node should now be at top of graph (and used by new auxiliary constraint) */
                }
@@ -3170,8 +3181,9 @@ SCIP_RETCODE reformulate(
 
          case SCIP_EXPR_PRODUCT:
          {
+            int naddconsreform = 0;
             /* ensure all children are linear */
-            SCIP_CALL( reformEnsureChildrenMinCurvature(scip, exprgraph, node, SCIP_EXPRCURV_LINEAR, conss, nconss, naddcons) );
+            SCIP_CALL( reformEnsureChildrenMinCurvature(scip, exprgraph, node, SCIP_EXPRCURV_LINEAR, conshdlr, naddcons) );
             if( SCIPexprgraphGetNodeCurvature(node) != SCIP_EXPRCURV_UNKNOWN )
             {
                ++i;
@@ -3180,10 +3192,11 @@ SCIP_RETCODE reformulate(
 
             /* if curvature is still unknown (quite likely), then turn into a cascade of bilinear terms
              * if node has parents, then ensure that it has a known curvature, otherwise we are also fine with a node that is a product of two (aux)variables */
-            SCIP_CALL( reformMonomial(scip, exprgraph, nchildren, children, NULL, &reformnode, havenonlinparent, SCIPexprgraphGetNodeDepth(node), naddcons) );
+            SCIP_CALL( reformMonomial(scip, exprgraph, nchildren, children, NULL, &reformnode, havenonlinparent, SCIPexprgraphGetNodeDepth(node), &naddconsreform) );
+            *naddcons += naddconsreform;
 
             /* replace node by reformnode in graph and in all constraints that use it */
-            SCIP_CALL( reformReplaceNode(exprgraph, &node, reformnode, conss, nconss) );
+            SCIP_CALL( reformReplaceNode(exprgraph, &node, reformnode, conshdlr, naddconsreform) );
 
             /* do not increase i, since node was removed and not necessarily replaced here */
             break;
@@ -3352,7 +3365,7 @@ SCIP_RETCODE reformulate(
                SCIPfreeBufferArray(scip, &monomialnodes);
 
                /* replace node by sumnode, and we are done */
-               SCIP_CALL( reformReplaceNode(exprgraph, &node, sumnode, conss, nconss) );
+               SCIP_CALL( reformReplaceNode(exprgraph, &node, sumnode, conshdlr, 0) );
 
                SCIPdebugMsg(scip, "splitup polynomial into sum of %d nodes\n", nmonomialnodes);
 
@@ -3387,7 +3400,7 @@ SCIP_RETCODE reformulate(
                {
                   assert(childcurv != SCIP_EXPRCURV_LINEAR);
                   SCIPdebugMsg(scip, "reform child %d (univar. monomial) with curv %s into var\n", childidxs[0], SCIPexprcurvGetName(childcurv));
-                  SCIP_CALL( reformNode2Var(scip, exprgraph, children[childidxs[0]], conss, nconss, naddcons, FALSE) );  /*lint !e613*/
+                  SCIP_CALL( reformNode2Var(scip, exprgraph, children[childidxs[0]], conshdlr, naddcons, FALSE) );  /*lint !e613*/
                   modified = TRUE;
                }
             }
@@ -3416,7 +3429,7 @@ SCIP_RETCODE reformulate(
                   if( childcurv == SCIP_EXPRCURV_UNKNOWN )
                   {
                      SCIPdebugMessage("reform child %d with unknown curvature into var\n", c);
-                     SCIP_CALL( reformNode2Var(scip, exprgraph, children[c], conss, nconss, naddcons, FALSE) );  /*lint !e613*/
+                     SCIP_CALL( reformNode2Var(scip, exprgraph, children[c], conshdlr, naddcons, FALSE) );  /*lint !e613*/
                      modified = TRUE;
                   }
                }
@@ -3516,7 +3529,7 @@ SCIP_RETCODE reformulate(
                      {
                         SCIPdebugMsg(scip, "reform child %d (factor %d) with curv %s into var\n",
                            childidxs[f], f, SCIPexprcurvGetName(SCIPexprgraphGetNodeCurvature(children[childidxs[f]])));  /*lint !e613*/
-                        SCIP_CALL( reformNode2Var(scip, exprgraph, children[childidxs[f]], conss, nconss, naddcons, FALSE) );  /*lint !e613*/
+                        SCIP_CALL( reformNode2Var(scip, exprgraph, children[childidxs[f]], conshdlr, naddcons, FALSE) );  /*lint !e613*/
                         modified = TRUE;
                      }
                   }
@@ -3552,6 +3565,7 @@ SCIP_RETCODE reformulate(
             {
                SCIP_EXPRGRAPHNODE* auxnode;
                SCIP_EXPRGRAPHNODE** factors;
+               int naddconsreform = 0;
 
                if( nfactors > 1 )
                {
@@ -3567,7 +3581,8 @@ SCIP_RETCODE reformulate(
                 * if node has parents and monomial is of indefinite form x^a, then also create auxvar for it, since otherwise we create a auxnode with unknown curvature
                 * note, that the case x^a with positive and odd a will still give an indefinite node (without parents), where we assume that signpower will pick it up at some point
                 */
-               SCIP_CALL( reformMonomial(scip, exprgraph, nfactors, factors, exponents, &auxnode, havenonlinparent, SCIPexprgraphGetNodeDepth(node), naddcons) );
+               SCIP_CALL( reformMonomial(scip, exprgraph, nfactors, factors, exponents, &auxnode, havenonlinparent, SCIPexprgraphGetNodeDepth(node), &naddconsreform) );
+               *naddcons += naddconsreform;
 
                if( nfactors > 1 )
                {
@@ -3585,7 +3600,7 @@ SCIP_RETCODE reformulate(
                }
 
                /* replace node by auxnode and refresh its curvature */
-               SCIP_CALL( reformReplaceNode(exprgraph, &node, auxnode, conss, nconss) );
+               SCIP_CALL( reformReplaceNode(exprgraph, &node, auxnode, conshdlr, naddconsreform) );
                SCIP_CALL( SCIPexprgraphUpdateNodeBoundsCurvature(auxnode, INTERVALINFTY, BOUNDTIGHTENING_MINSTRENGTH, TRUE) );
                assert(!SCIPintervalIsEmpty(INTERVALINFTY, SCIPexprgraphGetNodeBounds(auxnode)));
 
@@ -3603,7 +3618,7 @@ SCIP_RETCODE reformulate(
          case SCIP_EXPR_USER:
          {
             /* ensure all children are linear */
-            SCIP_CALL( reformEnsureChildrenMinCurvature( scip, exprgraph, node, SCIP_EXPRCURV_LINEAR, conss, nconss, naddcons ) );
+            SCIP_CALL( reformEnsureChildrenMinCurvature( scip, exprgraph, node, SCIP_EXPRCURV_LINEAR, conshdlr, naddcons ) );
 
             /* unknown curvature can be handled by user estimator callback or interval gradient */
             /*
@@ -3694,7 +3709,7 @@ SCIP_RETCODE reformulate(
                   SCIPdebugMsg(scip, "replace linear multivariate node %p(%d,%d) in expression of cons <%s> by auxvar\n",
                      (void*)multivarnode, SCIPexprgraphGetNodeDepth(multivarnode), SCIPexprgraphGetNodePosition(multivarnode), SCIPconsGetName(conss[c]));  /*lint !e613*/
                   SCIPdebugPrintCons(scip, conss[c], NULL);  /*lint !e613*/
-                  SCIP_CALL( reformNode2Var(scip, exprgraph, multivarnode, conss, nconss, naddcons, TRUE) );
+                  SCIP_CALL( reformNode2Var(scip, exprgraph, multivarnode, conshdlr, naddcons, TRUE) );
                }
             }
          }
@@ -3734,7 +3749,7 @@ SCIP_RETCODE reformulate(
             SCIPdebugMsg(scip, "replace linear multivariate node %p(%d,%d) in expression of cons <%s> by auxvar\n",
                (void*)multivarnode, SCIPexprgraphGetNodeDepth(multivarnode), SCIPexprgraphGetNodePosition(multivarnode), SCIPconsGetName(conss[c]));  /*lint !e613*/
             SCIPdebugPrintCons(scip, conss[c], NULL);  /*lint !e613*/
-            SCIP_CALL( reformNode2Var(scip, exprgraph, multivarnode, conss, nconss, naddcons, TRUE) );
+            SCIP_CALL( reformNode2Var(scip, exprgraph, multivarnode, conshdlr, naddcons, TRUE) );
          }
       }
    }
